--- a/Concepts/support_vector_regression.ipynb
+++ b/Concepts/support_vector_regression.ipynb
@@ -48,7 +48,7 @@
       },
       "outputs": [],
       "source": [
-        "dataset = pd.read_csv('Datasets/Position_Salaries.csv')\n",
+        "dataset = pd.read_csv('../Datasets/Position_Salaries.csv')\n",
         "X = dataset.iloc[:, 1:-1].values #Because we need a 2D array.\n",
         "y = dataset.iloc[:, -1].values #1D array (to be reformed in 2D array.)"
       ]
@@ -822,7 +822,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/vp/4637syr17gq79cb8mjcw_gb40000gn/T/ipykernel_43697/526399847.py:1: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+            "/var/folders/vp/4637syr17gq79cb8mjcw_gb40000gn/T/ipykernel_49820/526399847.py:1: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
             "  X_grid = np.arange(min(sc_X.inverse_transform(X)), max((sc_X.inverse_transform(X))), 0.1)\n"
           ]
         },
