--- a/Concepts/data_preprocessing_tools.ipynb
+++ b/Concepts/data_preprocessing_tools.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -65,7 +65,7 @@
         }
       ],
       "source": [
-        "dataset = pd.read_csv(\"Datasets/Data.csv\")\n",
+        "dataset = pd.read_csv(\"../Datasets/Data.csv\")\n",
         "print(dataset)"
       ]
     },
