--- a/Concepts/multiple_linear_regression.ipynb
+++ b/Concepts/multiple_linear_regression.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = pd.read_csv('Datasets/50_Startups.csv')\n",
+    "dataset = pd.read_csv('../Datasets/50_Startups.csv')\n",
     "X = dataset.iloc[:,:-1].values\n",
     "y = dataset.iloc[:,-1].values"
    ]
