--- a/Concepts/polynomial_regression.ipynb
+++ b/Concepts/polynomial_regression.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -55,7 +55,7 @@
       },
       "outputs": [],
       "source": [
-        "dataset = pd.read_csv('Datasets/Position_Salaries.csv')\n",
+        "dataset = pd.read_csv('../Datasets/Position_Salaries.csv')\n",
         "X = dataset.iloc[:, 1:-1].values\n",
         "y = dataset.iloc[:, -1].values"
       ]
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -496,7 +496,7 @@
               "LinearRegression()"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -516,7 +516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -552,7 +552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -589,7 +589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -634,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -643,7 +643,7 @@
               "array([330378.78787879])"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -661,7 +661,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -670,7 +670,7 @@
               "array([159252.43156778])"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -695,14 +695,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/vp/4637syr17gq79cb8mjcw_gb40000gn/T/ipykernel_43203/2867862783.py:1: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+            "/var/folders/vp/4637syr17gq79cb8mjcw_gb40000gn/T/ipykernel_49762/2867862783.py:1: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
             "  X_grid = np.arange(min(X), max(X), 0.1)\n"
           ]
         },
