added model efficiency

--- a/Model Selection/decision_tree_regression.ipynb
+++ b/Model Selection/decision_tree_regression.ipynb
@@ -594,6 +594,13 @@
         "from sklearn.metrics import r2_score\n",
         "r2_score(y_test, y_pred)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model is 92.41% efficient."
+      ]
     }
   ],
   "metadata": {
