--- a/Model Selection/multiple_linear_regression.ipynb
+++ b/Model Selection/multiple_linear_regression.ipynb
@@ -581,6 +581,13 @@
         "from sklearn.metrics import r2_score\n",
         "r2_score(y_test, y_pred)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model is 93.25% efficient."
+      ]
     }
   ],
   "metadata": {
