--- a/Model Selection/polynomial_regression.ipynb
+++ b/Model Selection/polynomial_regression.ipynb
@@ -584,6 +584,13 @@
         "from sklearn.metrics import r2_score\n",
         "r2_score(y_test, y_pred)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model is 94.22% efficient."
+      ]
     }
   ],
   "metadata": {
