--- a/ada_KNN_thyroid_risk_cancer.ipynb
+++ b/ada_KNN_thyroid_risk_cancer.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.preprocessing import OneHotEncoder, LabelEncoder, MinMaxScaler\n",
     "from scipy.stats import chi2_contingency\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report"
    ]
   },
   {
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +246,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +777,7 @@
        "[212690 rows x 28 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +917,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +960,7 @@
        "       0.09025285])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1062,17 +1063,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report"
+    "from sklearn.ensemble import AdaBoostClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1092,19 +1092,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.829\n"
+      "0.8291\n"
      ]
     }
    ],
    "source": [
-    "accuracy = round(accuracy_score(y_test, pred),3)\n",
+    "accuracy = round(accuracy_score(y_test, pred),4)\n",
     "print(accuracy)\n"
    ]
   },
@@ -1112,7 +1112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# accuracy is 82.9%"
+    "# accuracy is 82.91%"
    ]
   },
   {
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
        "[42538 rows x 2 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,14 +1240,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GBC"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Gradient Boosting Classifier Accuracy: 0.8291\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -1263,13 +1271,23 @@
     }
    ],
    "source": [
-    "classification_report_GBC = classification_report(y_test, pred)\n",
-    "print(\"\\nClassification Report:\\n\", classification_report_GBC)\n"
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "gbc = GradientBoostingClassifier(n_estimators=100, learning_rate=0.1, random_state=1)\n",
+    "\n",
+    "gbc.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_gbc = gbc.predict(X_test)\n",
+    "\n",
+    "accuracy_gbc = round(accuracy_score(y_test, y_pred_gbc), 4)\n",
+    "print(f\"Gradient Boosting Classifier Accuracy: {accuracy_gbc}\")\n",
+    "\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_gbc))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1292,21 +1310,123 @@
     }
    ],
    "source": [
-    "# Initialize KNN with default K=5\n",
     "knn = KNeighborsClassifier(n_neighbors=5)\n",
     "\n",
-    "# Train model\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
-    "# Predictions\n",
     "y_pred_knn = knn.predict(X_test)\n",
     "\n",
-    "# Evaluate performance\n",
     "accuracy_knn = round(accuracy_score(y_test, y_pred_knn), 3)\n",
     "print(f\"KNN Accuracy: {accuracy_knn}\")\n",
     "\n",
-    "# Classification Report\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_knn))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's try RANDOM FOREST."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=1)\n",
+    "\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf = rf.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.8283\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.94      0.89     32670\n",
+      "           1       0.71      0.44      0.55      9868\n",
+      "\n",
+      "    accuracy                           0.83     42538\n",
+      "   macro avg       0.78      0.69      0.72     42538\n",
+      "weighted avg       0.82      0.83      0.81     42538\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate performance\n",
+    "accuracy_rf = round(accuracy_score(y_test, y_pred_rf), 4)\n",
+    "print(f\"Random Forest Accuracy: {accuracy_rf}\")\n",
+    "\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_rf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# accuracy: 82.83%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy: 0.7068\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.81      0.80      0.81     32670\n",
+      "           1       0.38      0.40      0.39      9868\n",
+      "\n",
+      "    accuracy                           0.71     42538\n",
+      "   macro avg       0.60      0.60      0.60     42538\n",
+      "weighted avg       0.71      0.71      0.71     42538\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "dt = DecisionTreeClassifier(max_depth=None, random_state=1)\n",
+    "\n",
+    "dt.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_dt = dt.predict(X_test)\n",
+    "\n",
+    "accuracy_dt = round(accuracy_score(y_test, y_pred_dt), 4)\n",
+    "print(f\"Decision Tree Accuracy: {accuracy_dt}\")\n",
+    "\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_dt))\n"
    ]
   }
  ],
